package DesignPatterns.BehavioralType.Observer.Improve;

public class CurrentConditions implements Observer {

    private float temperature;
    private float pressure;
    private float humidity;

    public void update(float temperature, float pressure, float humidity) {
        this.temperature = temperature;
        this.pressure = pressure;
        this.humidity = humidity;
        display();
    }

    public void display() {
        System.out.println("=========CurrentConditions===========");
        System.out.println("Today Temperature: " + temperature);
        System.out.println("Today Pressure: " + pressure);
        System.out.println("Today Humidity: " + humidity);
    }
}
