package DesignPatterns.BehavioralType.Observer.Improve;

public interface Observer {
    void update(float temperature, float pressure, float humidity);
}
